--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,6 +19,14 @@
           "ignoreFailures": true
         }
       ]
+    },
+    {
+      "type": "lldb",
+      "request": "launch",
+      "name": "Launch",
+      "program": "/home/kacent/leetcode/76.最小覆盖子串",
+      "args": [],
+      "cwd": "${workspaceFolder}"
     }
   ]
 }
